--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <ul id="nav-menu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="aboutus.html">About Us</a></li>
-                <li><a href="pricing.html">Pricing Plan</a></li>
+                <li><a href="Pricing.html">Pricing Plan</a></li>
 
                 <li><a href="form.html">Donate Now</a></li>
                 <li><a href="ngo.html">NGOs</a></li>
@@ -52,7 +52,7 @@
     <!-- yahan tk theek-->
 
     <section id="offerings">
-        <h1 style="font-size: 25px;">"Our Offerings"</h1>
+        <h1 style=font-size: 25px"> "Our Offerings"</h1>
       <div class="offering">
           <p>Donation Connection</p>
           <button>Book Now</button>
