--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="photos/emolocals.webp" alt="blog">
             <div class="p-6">
               <h2 class="text-lg font-medium text-gray-100 mb-3">Aahar Aashirwad Expands Reach to Rural Areas</h2>
-              <p class="text-lg font-medium text-blue-300 mb-3">Aahar Aashirwad, a leading food donation initiative, has announced its expansion into rural areas. The initiative aims to provide meals to underserved communities, ensuring no one goes hungry.</p>
+              <p class="leading-relaxed mb-3 text-gray-300">Aahar Aashirwad, a leading food donation initiative, has announced its expansion into rural areas. The initiative aims to provide meals to underserved communities, ensuring no one goes hungry.</p>
               <div class="flex items-center flex-wrap">
              
               </div>
@@ -116,7 +116,7 @@
           <div class="h-full border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden">
             <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="photos/framer.jpeg" alt="blog">
             <div class="p-6">
-              <h2 class=""text-lg font-medium text-blue-300 mb-3"">Aahar Aashirwad Partners with Local Farmers</h2>
+              <h2 class="text-lg font-medium text-gray-100 mb-3">Aahar Aashirwad Partners with Local Farmers</h2>
               <p class="leading-relaxed mb-3 text-gray-300">In an exciting development, Aahar Aashirwad has partnered with local farmers to source fresh produce for its meal programs. This collaboration not only supports local agriculture but also ensures that beneficiaries receive nutritious, high-quality meals.</p>
               <div class="flex items-center flex-wrap">
               </div>
@@ -128,7 +128,7 @@
           <div class="h-full border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden">
             <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="photos/edu.jpg" alt="blog">
             <div class="p-6">
-              <h2 class="text-lg font-medium text-blue-300 mb-3">Aahar Aashirwad Launches Educational Campaign on Food Waste</h2>
+              <h2 class="text-lg font-medium text-gray-100 mb-3">Aahar Aashirwad Launches Educational Campaign on Food Waste</h2>
               <p class="leading-relaxed mb-3 text-gray-300">Aahar Aashirwad has launched a new educational campaign aimed at reducing food waste and promoting sustainable practices.</p>
               <div class="flex items-center flex-wrap">
                
@@ -235,5 +235,4 @@
     <script src="scripts.js"></script>
 </body>
 </html>
-
 
