--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <ul id="nav-menu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="aboutus.html">About Us</a></li>
-                <li><a href="Pricing.html">Pricing Plan</a></li>
+                <li><a href="pricing.html">Pricing Plan</a></li>
 
                 <li><a href="form.html">Donate Now</a></li>
                 <li><a href="ngo.html">NGOs</a></li>
@@ -52,7 +52,7 @@
     <!-- yahan tk theek-->
 
     <section id="offerings">
-        <h1 style=font-size: 25px"> "Our Offerings"</h1>
+        <h1 style="font-size: 25px;">"Our Offerings"</h1>
       <div class="offering">
           <p>Donation Connection</p>
           <button>Book Now</button>
@@ -92,7 +92,6 @@
 <br>
 <hr>
  
-
 <body>
     <h2 align="center" class="title">News/Blogs</h2>
   <section class="text-gray-400 bg-gray-900 body-font overflow-hidden">
@@ -103,7 +102,7 @@
           <div class="h-full border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden">
             <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="photos/emolocals.webp" alt="blog">
             <div class="p-6">
-              <h2 class="text-lg font-medium text-gray-100 mb-3">Aahar Aashirwad Expands Reach to Rural Areas</h2>
+              <h2 class="text-lg font-medium text-blue-300 mb-3">Aahar Aashirwad Expands Reach to Rural Areas</h2>
               <p class="leading-relaxed mb-3 text-gray-300">Aahar Aashirwad, a leading food donation initiative, has announced its expansion into rural areas. The initiative aims to provide meals to underserved communities, ensuring no one goes hungry.</p>
               <div class="flex items-center flex-wrap">
              
@@ -116,7 +115,8 @@
           <div class="h-full border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden">
             <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="photos/framer.jpeg" alt="blog">
             <div class="p-6">
-              <h2 class="text-lg font-medium text-gray-100 mb-3">Aahar Aashirwad Partners with Local Farmers</h2>
+              <h2 class="text-lg font-medium text-blue-300 mb-3">Aahar Aashirwad Partners with Local Farmers</h2>
+
               <p class="leading-relaxed mb-3 text-gray-300">In an exciting development, Aahar Aashirwad has partnered with local farmers to source fresh produce for its meal programs. This collaboration not only supports local agriculture but also ensures that beneficiaries receive nutritious, high-quality meals.</p>
               <div class="flex items-center flex-wrap">
               </div>
@@ -128,7 +128,7 @@
           <div class="h-full border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden">
             <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="photos/edu.jpg" alt="blog">
             <div class="p-6">
-              <h2 class="text-lg font-medium text-gray-100 mb-3">Aahar Aashirwad Launches Educational Campaign on Food Waste</h2>
+              <h2 class="text-lg font-medium text-blue-300 mb-3">Aahar Aashirwad Launches Educational Campaign on Food Waste</h2>
               <p class="leading-relaxed mb-3 text-gray-300">Aahar Aashirwad has launched a new educational campaign aimed at reducing food waste and promoting sustainable practices.</p>
               <div class="flex items-center flex-wrap">
                
@@ -143,6 +143,8 @@
 
 </body>
 </html>
+<section>
+<br>
 <hr>
     <link rel="stylesheet" href="impstyles.css">
     <div class="container px-5 py-24 mx-auto">
@@ -235,4 +237,5 @@
     <script src="scripts.js"></script>
 </body>
 </html>
+
 
