--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <ul id="nav-menu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="aboutus.html">About Us</a></li>
-                <li><a href="pricing.html">Pricing Plan</a></li>
+                <li><a href="Pricing.html">Pricing Plan</a></li>
 
                 <li><a href="form.html">Donate Now</a></li>
                 <li><a href="ngo.html">NGOs</a></li>
